<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="72dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/txtTituloPantalla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_passwords"
            android:textColor="#0C151D"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp" />

        <!-- Buscador -->
        <LinearLayout
            android:id="@+id/cajaBusqueda"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/fondo_redondeado"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/cd_search" />

            <EditText
                android:id="@+id/edtBuscar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_search_passwords"
                android:textColor="#0C151D"
                android:textColorHint="#8A8A8A"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no" />
        </LinearLayout>

        <!-- Lista -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPasswords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp" />
    </LinearLayout>

    <!-- Barra inferior -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#E6F0FF"
        android:elevation="8dp"
        app:menu="@menu/menu_botones"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="#359DFF"
        app:itemTextColor="#359DFF"
        app:itemRippleColor="@android:color/transparent"
        app:itemBackground="@android:color/transparent" />

    <!-- Icono de agregar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_add"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/bottomNav"
        app:layout_anchorGravity="center"
        android:translationY="-22dp"
        app:backgroundTint="#359DFF"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
